--- a/chat.ipynb
+++ b/chat.ipynb
@@ -3308,23 +3308,38 @@
       "source": [
         "import nbformat\n",
         "\n",
-        "# Load your notebook\n",
-        "path = \"chat.ipynb\"\n",
-        "nb = nbformat.read('/content/drive/MyDrive/Colab Notebooks/chat.ipynb', as_version=4)\n",
+        "# Update this with the actual name of your notebook file\n",
+        "# Using the full path found by the user in Google Drive's 'Colab Notebooks' folder\n",
+        "filename = \"/content/drive/MyDrive/Colab Notebooks/chat.ipynb\"\n",
         "\n",
-        "# Remove problematic widget metadata\n",
-        "for cell in nb.cells:\n",
-        "    if 'metadata' in cell and 'widgets' in cell['metadata']:\n",
-        "        del cell['metadata']['widgets']\n",
+        "with open(filename, \"r\") as f:\n",
+        "    nb = nbformat.read(f, as_version=4)\n",
         "\n",
-        "# Save the cleaned notebook\n",
-        "nbformat.write(nb, \"chat_clean.ipynb\")\n"
+        "if \"widgets\" in nb.metadata:\n",
+        "    del nb.metadata[\"widgets\"]\n",
+        "\n",
+        "with open(filename, \"w\") as f:\n",
+        "    nbformat.write(nb, f)\n",
+        "\n",
+        "print(\"Notebook metadata cleaned and saved:\", filename)"
       ],
       "metadata": {
-        "id": "4uIC4N49uJ35"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4uIC4N49uJ35",
+        "outputId": "8efb785f-26a0-4540-eabe-f43c94ce742d"
       },
-      "execution_count": 29,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Notebook metadata cleaned and saved: /content/drive/MyDrive/Colab Notebooks/chat.ipynb\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
@@ -3332,7 +3347,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyNx5MgcH1WMW2RIOzZEwVS5",
+      "authorship_tag": "ABX9TyN8sa55Qe8rNuhFqlmWpr/n",
       "include_colab_link": true
     },
     "kernelspec": {
